feat: 优化了数据结构